# medium-prod

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  local.yml  prod.yml  pyproject.toml  pyrightconfig.json  readme中文.md  run  test.yml
.example.envs/.local/: .django  .nginx  .postgres
.github/workflows/: bumpversion.yml  checks.yml  deploy.yml  destroy.yml  pr.yml  test-and-lint.yml  test_and_lint.yml
core/: __init__.py  urls.py
core/apps/: __init__.py
core/apps/account/: admin.py  apps.py  forms.py  managers.py  models.py
core/apps/account/migrations/: 0001_initial.py
core/apps/articles/: admin.py  apps.py  documents.py  filters.py  managers.py  models.py  paginations.py  permissions.py  read_time_engine.py  renderers.py  serializers.py  signals.py  urls.py  views.py
core/apps/articles/migrations/: 0001_initial.py  0002_alter_articleview_unique_together_and_more.py  0003_clap_clap_unique_article_per_user.py  0004_article_responses_count.py  0005_remove_article_responses_count.py  0006_alter_article_managers.py  0007_rename_id_article_temp_id_and_more.py  0008_rename_pkid_article_id_rename_pkid_articleview_id_and_more.py  0009_rename_temp_id_article_pkid_and_more.py  0010_alter_article_options.py  0011_alter_article_slug.py  0012_alter_article_slug.py  0013_alter_article_slug.py  0014_alter_article_options.py  0015_alter_article_banner_image.py
core/apps/articles/services/: es.py  read_time_engine.py
core/apps/bookmarks/: admin.py  apps.py  constants.py  exceptions.py  filters.py  managers.py  models.py  paginations.py  permissions.py  serializers.py  signals.py  urls.py  views.py
core/apps/bookmarks/migrations/: 0001_initial.py  0002_alter_bookmark_options.py  0003_alter_bookmark_article.py  0004_bookmarkcategory_and_more.py  0005_bookmarkcategory_is_reading_list.py  0006_alter_bookmarkcategory_is_reading_list.py  0007_bookmarksincategories_readingcategory_and_more.py  0011_alter_readingcategory_title.py  (+12 more)
core/apps/general/: __init__.py  admin.py  apps.py  middlewares.py  models.py  permissions.py  urls.py  views.py
core/apps/profiles/: admin.py  apps.py  exceptions.py  managers.py  models.py  paginations.py  renderers.py  renders.py  serializers.py  services.py  signals.py  urls.py  views.py
core/apps/ratings/: admin.py  apps.py  exceptions.py  managers.py  models.py  paginations.py  serializers.py  urls.py  views.py
core/apps/responses/: admin.py  apps.py  exceptions.py  managers.py  models.py  paginations.py  serializers.py  signals.py  urls.py  ursl.py  views.py
core/apps/user/: __init__.py  admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  signals.py  views.py
core/celery/: __init__.py  celeryconfig.py  task.py
core/settings/: __init__.py  base.py  github.py  local.py  loggings.py  production.py  project.py
core/tests/: conftest.py
core/tests/fixtures/: __init__.py  articles_fixtures.json  constants.py  users_verified.json
core/tests/setup/: test_settings.py
core/tests/tools/: test_email.py  test_utils.py
core/tests/utils/: misc.py
core/tools/: email.py  hash.py  image.py  loggers.py
core/utils/: admin.py  api_mixins.py  article.py  email.py  hash.py
docker/local/django/: Dockerfile  entrypoint  start
docker/local/nginx/: Dockerfile  default.conf.tpl  entrypoint  proxy_params
docker/local/postgres/: Dockerfile
docker/prod/django/: Dockerfile  entrypoint  start
docker/prod/nginx/: Dockerfile  default.conf.tpl  entrypoint
local/: settings.dev.py  settings.local.py
terraform/: tf.yml
terraform/deploy/: database.tf  dns.tf  ec.tf  ecs.tf  efs.tf  loadbalancer.tf  main.tf  networks.tf  opensearch.tf  ourtputs.tf  ses.tf  variables.tf
terraform/setup/: ecr.tf  iam.tf  main.tf  output.tf  ses_iam.tf  variables.tf
(+173 files in other folders)
